--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "bootstrap": "^4.5.0",
     "bootstrap-vue": "^2.15.0",
+    "crypto-js": "^4.0.0",
     "feed-parser": "^1.0.19",
     "mysql2": "^2.1.0",
     "node-cron": "^2.0.3",
